# Medical_Smart_Watch

./: .gitignore  LICENSE  README.md
APP/: VTs_MSW.apk  VTs_MSW_ver1_1.apk
FIRMWARE/: sdkconfig
FIRMWARE/Ver1.0/: .gitignore  main.rar  sdkconfig.old
FIRMWARE/Ver1.0/main/: CMakeLists.txt  main.c
FIRMWARE/Ver1.0/main/button/: button.c  button.h
FIRMWARE/Ver1.0/main/display/: ssd1306.h  ssd1306_spi.c
FIRMWARE/Ver1.0/main/sensor/: algorithm.c  max30102.c  max30102.h
FIRMWARE/Ver2.0/main/bluetooth/: bluetooth.c
FIRMWARE/Ver2.0/main/display/: ssd1306_i2c.c
FIRMWARE/main/: main.c
FIRMWARE/main/bluetooth/: bluetooth.c  bluetooth.h
FIRMWARE/main/button/: button.h
FIRMWARE/main/display/: ssd1306_i2c.c
FIRMWARE/main/sensor/: algorithm.c  algorithm.h  max30102.c  max30102.h
HARDWARE/Ver1.0/: CAMtastic1.Cam  Main_PCB-macro.APR_LIB  Main_PCB.EXTREP  Main_PCB.GBL  Main_PCB.GBO  Main_PCB.GBS  Main_PCB.GKO  Main_PCB.GM1  Main_PCB.GM13  Main_PCB.GM15  Main_PCB.GM16  Main_PCB.GTL  Main_PCB.GTO  Main_PCB.GTS  Main_PCB.REP  Main_PCB.RUL  Main_PCB.apr  Medical_Smart_Watch.rar  Status Report.Txt
HARDWARE/Ver1.0/Medical_Smart_Watch/: MSW_V1.SchDoc  Medical_Smart_Watch.OutJob  Medical_Smart_Watch.PrjPcb  Medical_Smart_Watch.PrjPcbStructure
HARDWARE/Ver1.0/__Previews/: MSW_V1.SchDocPreview
HARDWARE/Ver2.0/Medical_Smart_Watch/: MSW_V2.PcbDoc  MSW_V2.SchDoc  Medical_Smart_Watch.PrjPcb  Medical_Smart_Watch.PrjPcbStructure
HARDWARE/Ver2.0/Medical_Smart_Watch/__Previews/: MSW_V2.SchDocPreview
REFERENCE/: MAX30102.pdf.lnk
