idf_component_register( SRCS    "main.c"
                                "bluetooth/bluetooth.c"
                                "button/button.c"
                                "display/ssd1306_i2c.c"
                                "display/ssd1306_spi.c"
                                "display/ssd1306.c"
                                "sensor/algorithm.c"
                                "sensor/max30102.c"
                INCLUDE_DIRS    "."
                                "./sensor"
                                "./button"
                                "./display"
                                "./bluetooth"
)
